--- a/css/styles.css
+++ b/css/styles.css
@@ -8,16 +8,24 @@ body {
   font-family: Roboto, sans-serif;
   color: var(--primary-text-color);
   font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.logo {
+  color: var(--accent-color);
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  text-decoration: none;
 }
 
 .link {
   text-decoration: none;
   cursor: pointer;
-  color: var(--title-text-color);
-}
-
-.link:hover {
-  color: var(--accent-color);
 }
 
 .list {
@@ -28,59 +36,192 @@ body {
   color: var(--title-text-color);
 }
 
+.button {
+  font-family: inherit;
+}
+
 /* Шапка */
 
-.nav {
-  background-color: #fff;
+.logo-end {
+  color: #000000;
 }
 
-.logo {
-  font-family: Raleway, sans-serif;
-  color: var(--accent-color);
-  text-decoration: none;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-}
-
-.logo > .logo-nav {
+.site-nav .link {
   color: var(--title-text-color);
-}
-
-.nav > .list {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.02em;
 }
 
-.nav .contact {
+.auth-nav .link {
   color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+}
+
+.site-nav .link:hover,
+.site-nav .link:focus,
+.site-nav .active {
+  color: var(--accent-color);
+}
+
+.section-title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 /* Герой */
-
-.hero {
+.site-hero {
   background-color: #2f303a;
 }
 
-.hero > .title {
+.hero-title {
+  color: #ffffff;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
+  text-align: center;
   text-transform: uppercase;
-  color: #fff;
 }
 
-.hero > .link {
+.hero-button {
+  color: #ffffff;
+  background-color: var(--accent-color);
+  font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  display: flex;
-  align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  color: #fff;
+}
+
+.hero-button:hover,
+.hero-button:focus {
+  color: var(--title-text-color);
+}
+
+/* Особенности */
+
+.feature-list {
+  list-style: none;
+}
+.feature-list .title {
+  color: var(--title-text-color);
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+/* Наши работы */
+
+.work-list {
+  list-style: none;
+}
+
+/* Команда */
+
+.team-list {
+  list-style: none;
+}
+
+.team-list .title {
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+}
+
+/* Подвал */
+.site-footer {
+  background: #2f303a;
+}
+
+.site-footer .logo-end {
+  color: #ffffff;
+}
+
+.site-footer .link:focus,
+.site-footer .link:hover {
+  color: var(--accent-color);
+}
+
+.site-footer .map {
+  color: #ffffff;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.site-footer .contact {
+  color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+/* portfolio.html */
+
+/* Фильтр */
+
+.filtr-list {
+  list-style: none;
+}
+
+.filtr-list .button {
+  cursor: pointer;
+
+  color: var(--title-text-color);
+  background: #f5f4fa;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+}
+
+.filtr-list .button:hover,
+.filtr-list .button:focus {
+  color: #ffffff;
+  background-color: var(--accent-color);
+}
+
+.filtr-list .active {
+  color: #ffffff;
+  background-color: var(--accent-color);
+}
+
+.filtr-list .active:hover,
+.filtr-list .active:focus {
+  color: var(--title-text-color);
+}
+
+/* Примеры работ */
+
+.example-list {
+  list-style: none;
+}
+
+.example-list .title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.example-list .text {
+  color: var(--primary-text-color);
+  font-size: 16px;
+  line-height: 1.87;
 }
